Fixed arrow being too high causing bottom box to go up

--- a/index.css
+++ b/index.css
@@ -54,7 +54,7 @@ body {
 
 /* Arrow 1*/
 #arrow1 {
-    margin-top: 190px;
+    margin-top: 200px;
     margin-left: 46%;
     height: 100px;
     width: 100px;
